# Video_Enhancer_Web

./: .gitignore  README.md  package.json
python/: pyproject.toml
python/src/: pipeline.py
python/src/models/: __init__.py  interpolation.py  nafnet.py  realesrgan.py
python/src/models/flavr/: __init__.py  flavr_arch.py  resnet_3d.py
python/src/models/rife/: __init__.py  ifnet.py  model.py  warplayer.py
python/src/scripts/: download_models.py
python/src/utils/: cleanup.py  devices.py  duplicates.py  errors.py  ffmpeg.py  progress.py
scripts/: init-db.ts  setup-and-start.ts  setup.ts
web/: .gitignore  package.json
web/e2e/: playwright.config.ts  smoke.spec.ts
web/src/: routeTree.gen.ts  types.ts
web/src/components/: ConfigPanel.tsx  JobsList.tsx  LivePreview.tsx  ModelManager.tsx  ProgressCard.tsx  ResultPlayer.tsx  UploadDropzone.tsx
web/src/hooks/: useJobProgress.ts
web/src/routes/: __root.tsx  index.tsx
web/src/routes/api/: devices.ts  jobs.$jobId.ts  jobs.ts  models.ts  output.$jobId.ts  upload.ts
web/src/server/: db.ts  devices.ts  jobs.ts  models.ts
