[project]
name = "ai-video-enhancer"
version = "0.1.0"
description = "Python ML worker for AI Video Enhancer"
requires-python = ">=3.12"
dependencies = [
    "opencv-python",
    "imageio-ffmpeg",
    "ffmpeg-python",
    "numpy",
    "pillow",
    "scikit-image",
    "requests",
    "tqdm",
    "torch",
    "torchvision",
    "safetensors>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
